cluster/apps/default/document-server/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: document-server
  template:
    metadata:
      labels:
        app: document-server
      annotations:
        container.apparmor.security.beta.kubernetes.io/document-server: runtime/default
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
    spec:
      containers:
        - name: document-server
          image: onlyoffice/documentserver
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
      automountServiceAccountToken: false
  strategy: {}
