cluster/apps/default/document-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: document-server
  namespace: default
spec:
  selector:
    app: document-server
  ports:
  - port: 80
    targetPort: 80
